# Sem01-Lab01

./: PROBLEM_STATEMENT.md
data/: courses.json  students.json
lab01-Github819275/: README.md  pyproject.toml  run.py
lab01-Github819275/data/: enrollments.json  staff.json
lab01-Github819275/src/: __init__.py
lab01-Github819275/src/cli/: cli_interface.py  main.py
lab01-Github819275/src/core/: __init__.py
lab01-Github819275/src/core/dto/: __init__.py  enrollment_dto.py  staff_dto.py
lab01-Github819275/src/core/entities/: __init__.py  course.py
lab01-Github819275/src/core/storage/: __init__.py  base.py  course_storage.py
lab01-Github819275/src/exceptions/: __init__.py
lab01-Github819275/src/services/: enrollment_service.py  student_service.py
lab01-Github819275/tests/core/: test_dto.py  test_entities.py  test_storage_system.py
lab01-Github819275/tests/core/storage/: test_course_storage.py  test_enrollment_storage.py
lab01-Github819275/tests/services/: __init__.py  test_staff_service.py
src/cli/: __init__.py
src/core/: storage_system.py
src/core/dto/: course_dto.py  student_dto.py
src/core/entities/: staff.py  student.py
src/core/storage/: enrollment_storage.py  staff_storage.py  student_storage.py
src/exceptions/: enrollment_errors.py
src/services/: __init__.py  course_service.py  staff_service.py
tests/: test_exceptions.py
tests/core/storage/: __init__.py  test_staff_storage.py  test_student_storage.py
tests/services/: test_course_service.py  test_enrollment_service.py  test_student_service.py
